Reformatting code + working on unit testings the mappers